--- a/Legiscraper/Legiscraper.fsproj
+++ b/Legiscraper/Legiscraper.fsproj
@@ -5,6 +5,7 @@
     <TargetFramework>net9.0</TargetFramework>
   </PropertyGroup>
   <ItemGroup>
+    <Compile Include="CSV.fs" />
     <Compile Include="Program.fs" />
   </ItemGroup>
   <ItemGroup>
